--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Aula HTML</h1>
     <p> Segunda aula sobre HTML</p>
-    
+    <h2>Adicionando imagens</h2>
+    <img src="Inf.png" alt="Imagen acerca da informática"
+    <p>Faça uma busca no <a target=blank href="https://www.google.com.br/?hl=pt-BR">google!</a></p>
+    <h2>Aprenda mais sobre HTML!</h2>
+     <a </a> 
 </body>
 </html>
