--- a/index.html
+++ b/index.html
@@ -9,9 +9,32 @@
     <h1>Aula HTML</h1>
     <p> Segunda aula sobre HTML</p>
     <h2>Adicionando imagens</h2>
-    <img src="Inf.png" alt="Imagen acerca da informática"
+    <img src="Inf.png" alt="Imagen acerca da informática">
     <p>Faça uma busca no <a target=blank href="https://www.google.com.br/?hl=pt-BR">google!</a></p>
     <h2>Aprenda mais sobre HTML!</h2>
-     <a </a> 
+
+    <h2> Listas!</h2>
+   <ul> <!-- Começando a lista!-->
+        <li> <a href="#">Primeiro Item</a></li>
+        <a href="#"><li>Segundo Item</li></a>
+        <li>Terceiro Item</li>
+   </ul>
+   <h2>Tabelas!</h2>
+
+   <table border="solid"> 
+        <tr>
+        <th>Cabçalho1!!</th>
+        <td> Dado 1</td>
+        </tr>
+        <tr>
+        <th>Cabeçalho 2</th>
+        <td>dado2</td>
+        </tr>
+    </table>
+    <h2>DIVs e Span</h2>
+    <a href="#"> <div style="border: 1px solid"> </div> </a>
+        <div style= "border 1px solid">Testando uma div</div>
+        <span> Testando SPAN</span>
+
 </body>
 </html>
